ast/testdata/tests/errors/mappings/typo_in_token_name.rql
mapppng test using Demo {
    a -> b
}
